--- a/webapp/templates/entry.html
+++ b/webapp/templates/entry.html
@@ -10,8 +10,8 @@
 <tr><td>Phrase:</td><td><input name='phrase' type='TEXT' width='60'></td></tr>
 <tr><td>Letters:</td><td><input name='letters' type='TEXT' value='aeiou'></td></tr>
 </table>
-<p>When you're ready, click this button:</p>
-<p><input value='Do it!' type='SUBMIT'></p>
+<p>When you're ready, click submit:</p>
+<p><input value='Submit!' type='SUBMIT'></p>
 </form>
 
 {% endblock %}
